--- a/index.html
+++ b/index.html
@@ -2,151 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Warta Jemaat Digital</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Pokemon Magazine</title>
 </head>
 
 <body>
-
-    <div id="loader-overlay">
-        <div class="spinner"></div>
-        <div class="loading-text">Memuat Warta...</div>
+  <div class="flipbook">
+    <div class="hard">My Pokemon Gallery <small>~ HankTheTank</small></div>
+    <div class="hard"></div>
+    <div>
+      <small>Lets Look At Some Amazing Pokemon ❤️</small>
+      <small>Gotta Catch 'Em All</small>
     </div>
-    <!-- Audio Element (Hidden) -->
-    <!-- Pastikan file ini ada di folder yang sama -->
-    <audio id="pageFlipSound" src="mixkit-page-turn-single-1104.wav" preload="auto"></audio>
-
-    <div class="viewport">
-        <button class="nav-side left" id="prevBtn"><i class="fa-solid fa-chevron-left"></i></button>
-        <button class="nav-side right" id="nextBtn"><i class="fa-solid fa-chevron-right"></i></button>
-        <div class="book-container">
-            <div class="flipbook">
-                <!-- Cover Depan -->
-                <div class="hard"><img src="images/cover1.svg" alt="" /></div>
-
-                <!-- Cover Dalam Depan (Akan dihapus di Mobile) -->
-                <div class="hard inside-cover"><img src="images/Coverin1.svg" alt="" /></div>
-
-                <!-- Halaman Isi -->
-                <div><img src="images/page1.svg" alt="" /></div>
-                <div><img src="images/page2.svg" alt="" /></div>
-                <div><img src="images/page3.svg" alt="" /></div>
-                <div><img src="images/page4.svg" alt="" /></div>
-                <div><img src="images/page5.svg" alt="" /></div>
-                <div><img src="images/page6.svg" alt="" /></div>
-                <div><img src="images/page7.svg" alt="" /></div>
-                <div><img src="images/page8.svg" alt="" /></div>
-                <div><img src="images/page9.svg" alt="" /></div>
-                <div><img src="images/page10.svg" alt="" /></div>
-                <div><img src="images/page11.svg" alt="" /></div>
-                <div><img src="images/page12.svg" alt="" /></div>
-
-                <!-- Cover Dalam Belakang (Akan dihapus di Mobile) -->
-                <div class="hard inside-cover"><img src="images/Coverin2.svg" alt="" /></div>
-
-                <!-- Cover Belakang -->
-                <div class="hard"><img src="images/cover2.svg" alt="" /></div>
-
-            </div>
-        </div>
-        <div class="toolbar-container">
-            <div id="popupMenu" class="popup-menu">
-                <button class="menu-item" id="firstPageBtn"><i class="fa-solid fa-backward-step"></i> Goto First
-                    Page</button>
-                <button class="menu-item" id="lastPageBtn"><i class="fa-solid fa-forward-step"></i> Goto Last
-                    Page</button>
-                <button class="menu-item" id="toggleSoundMenu"><i class="fa-solid fa-volume-high"
-                        id="soundIconMenu"></i> Turn on/off Sound</button>
-            </div>
-
-            <div class="toolbar">
-                <div class="page-indicator" id="pageLabel">1 / 14</div>
-                <div class="separator"></div>
-                <button class="btn" id="zoomOut"><i class="fa-solid fa-minus"></i></button>
-                <button class="btn" id="zoomIn"><i class="fa-solid fa-plus"></i></button>
-                <div class="separator"></div>
-                <button class="btn" id="fullscreenBtn"><i class="fa-solid fa-expand"></i></button>
-                <button class="btn" id="menuBtn"><i class="fa-solid fa-ellipsis"></i></button>
-            </div>
-
-        </div>
+    <div>
+      <img src="images/img-1.png" alt="" />
+      <small> Charmandar </small>
     </div>
+    <div>
+      <img src="images/img-2.png" alt="" />
+      <small> Arbok </small>
+    </div>
+    <div>
+      <img src="images/img-3.png" alt="" />
+      <small> Pikachu </small>
+    </div>
+    <div>
+      <img src="images/img-4.png" alt="" />
+      <small> Mew </small>
+    </div>
+    <div>
+      <img src="images/img-5.png" alt="" />
+      <small> Darkrai </small>
+    </div>
+    <div class="hard"></div>
+    <div class="hard">Thank You <small>~ HankTheTank</small></div>
+  </div>
 
-    <script src="jquery.js"></script>
-    <script src="turn.js"></script>
-
-    <script>
-        $(window).on('load', function () {
-            var flipbook = $(".flipbook");
-            var audio = document.getElementById("pageFlipSound");
-            var isSoundOn = true;
-            var currentZoomScale = 1;
-
-            function playPageSound() {
-                if (isSoundOn && audio) {
-                    audio.currentTime = 0;
-                    audio.play().catch(function () { });
-                }
-            }
-
-            // Inisialisasi Turn.js
-            flipbook.turn({
-                width: 960,
-                height: 680,
-                autoCenter: true,
-                duration: 1000,
-                when: {
-                    turning: function () { playPageSound(); },
-                    turned: function (e, page, view) {
-                        var total = flipbook.turn("pages");
-                        var label = (view[0] || view[1]) ? view.join("/") : page;
-                        $("#pageLabel").text(label + " / " + total);
-                    }
-                }
-            });
-
-            // Event Listener (ID disesuaikan dengan HTML)
-            $("#prevBtnSide, #prevBtnToolbar").click(function () { flipbook.turn("previous"); });
-            $("#nextBtnSide, #nextBtnToolbar").click(function () { flipbook.turn("next"); });
-
-            $("#zoomInBtn").click(function () {
-                if (currentZoomScale < 2) { currentZoomScale += 0.1; applyZoom(); }
-            });
-            $("#zoomOutBtn").click(function () {
-                if (currentZoomScale > 0.6) { currentZoomScale -= 0.1; applyZoom(); }
-            });
-
-            $("#toggleSoundMenu").on("click", function (e) {
-                e.stopPropagation();
-                isSoundOn = !isSoundOn;
-                $(this).html(isSoundOn ?
-                    '<i class="fa-solid fa-volume-high"></i> Turn off Sound' :
-                    '<i class="fa-solid fa-volume-xmark"></i> Turn on Sound');
-            });
-
-            $("#menuBtn").click(function (e) { e.stopPropagation(); $("#popupMenu").toggleClass("show"); });
-            $(document).click(function () { $("#popupMenu").removeClass("show"); });
-
-            function applyZoom() {
-                var width = $(window).width();
-                var baseScale = 1;
-                if (width >= 768) {
-                    var scaleX = (width - 40) / 960;
-                    var scaleY = ($(window).height() - 40) / 680;
-                    baseScale = Math.min(scaleX, scaleY);
-                    if (baseScale > 1.1) baseScale = 1.1;
-                }
-                $(".book-container").css("transform", "scale(" + (baseScale * currentZoomScale) + ")");
-            }
-
-            $(window).resize(applyZoom);
-            applyZoom();
-            $("#loader-overlay").fadeOut(500);
-        });
-    </script>
+  <script src="jquery.js"></script>
+  <script src="turn.js"></script>
+  <script>
+    $(".flipbook").turn();
+  </script>
 </body>
 
 </html>
