--- a/index.html
+++ b/index.html
@@ -80,132 +80,136 @@ apakah Benar seperti ini?
     <script src="turn.js"></script>
 
     <script>
-    $(window).on('load', function () {
-        var flipbook = $(".flipbook");
-        var loader = $("#loader-overlay");
-        var audio = document.getElementById("pageFlipSound");
-        var isSoundOn = true;
+        $(window).on('load', function () {
+            var flipbook = $(".flipbook");
+            var loader = $("#loader-overlay");
+            var audio = document.getElementById("pageFlipSound");
+            var isSoundOn = true;
 
-        function playPageSound() {
-            if (isSoundOn && audio) {
-                audio.currentTime = 0;
-                var playPromise = audio.play();
-                if (playPromise !== undefined) {
-                    playPromise.catch(error => console.log("Audio blocked:", error));
+            function playPageSound() {
+                // Mengecek apakah status suara aktif (true) dan file audio tersedia
+                if (isSoundOn && audio) {
+                    audio.currentTime = 0; // Reset ke awal agar suara tidak tumpang tindih
+                    var playPromise = audio.play();
+
+                    if (playPromise !== undefined) {
+                        playPromise.catch(error => {
+                            console.log("Autoplay diblokir browser sampai ada interaksi user.");
+                        });
+                    }
                 }
             }
-        }
 
-        // 1. Inisialisasi Turn.js
-        flipbook.turn({
-            width: 960,
-            height: 680,
-            autoCenter: true,
-            acceleration: true,
-            gradients: true,
-            elevation: 50,
-            duration: 1000,
-            when: {
-                turning: function (e, page, view) {
-                    playPageSound();
-                },
-                turned: function (e, page, view) {
-                    // Update Label Halaman otomatis saat dibalik
-                    var totalPages = flipbook.turn("pages");
-                    var pageLabel = (view[0] || view[1]) ? view.join("/") : page;
-                    $("#pageLabel").text(pageLabel + " / " + totalPages);
+            // 1. Inisialisasi Turn.js
+            flipbook.turn({
+                width: 960,
+                height: 680,
+                autoCenter: true,
+                acceleration: true,
+                gradients: true,
+                elevation: 50,
+                duration: 1000,
+                when: {
+                    turning: function (e, page, view) {
+                        playPageSound();
+                    },
+                    turned: function (e, page, view) {
+                        // Update Label Halaman otomatis saat dibalik
+                        var totalPages = flipbook.turn("pages");
+                        var pageLabel = (view[0] || view[1]) ? view.join("/") : page;
+                        $("#pageLabel").text(pageLabel + " / " + totalPages);
+                    }
                 }
-            }
-        });
+            });
 
-        // 2. Navigasi Panah Samping
-        $("#prevBtn").click(function () { flipbook.turn("previous"); });
-        $("#nextBtn").click(function () { flipbook.turn("next"); });
+            // 2. Navigasi Panah Samping
+            $("#prevBtn").click(function () { flipbook.turn("previous"); });
+            $("#nextBtn").click(function () { flipbook.turn("next"); });
 
-        // 3. Logika Toolbar Bawah
-        $("#zoomIn").click(function () {
-            currentZoomScale = Math.min(currentZoomScale + 0.1, 2);
-            applyZoom();
-        });
-        
-        $("#zoomOut").click(function () {
-            currentZoomScale = Math.max(currentZoomScale - 0.1, 0.6);
-            applyZoom();
-        });
-
-        $("#menuBtn").click(function (e) {
-            e.stopPropagation();
-            $("#popupMenu").toggleClass("show");
-        });
-
-        $(document).click(function () { $("#popupMenu").removeClass("show"); });
-
-        $("#firstPageBtn").click(function () { flipbook.turn("page", 1); });
-        $("#lastPageBtn").click(function () { flipbook.turn("page", flipbook.turn("pages")); });
-
-        $("#fullscreenBtn").click(function () {
-            if (!document.fullscreenElement) {
-                document.documentElement.requestFullscreen();
-            } else {
-                if (document.exitFullscreen) { document.exitFullscreen(); }
-            }
-        });
-
-        // 4. Fungsi Responsive & Zoom (Tetap seperti kode Anda)
-        var currentZoomScale = 1;
-        function applyZoom() {
-            var width = $(window).width();
-            var baseWidth = 960;
-            var baseScale = 1;
-            if (width >= 768) {
-                var scaleX = (width - 60) / baseWidth;
-                var scaleY = ($(window).height() - 60) / 680;
-                baseScale = Math.min(scaleX, scaleY);
-                if (baseScale > 1.2) baseScale = 1.2;
-            }
-            $(".book-container").css("transform", "scale(" + (baseScale * currentZoomScale) + ")");
-        }
-
-        function resizeViewport() {
-            var width = $(window).width();
-            var container = $(".book-container");
-            if (width < 768) {
-                flipbook.turn("display", "single");
-                var mWidth = width - 20;
-                flipbook.turn("size", mWidth, mWidth * 1.414);
-                container.css({"transform": "none", "width": mWidth, "height": mWidth * 1.414});
-            } else {
-                flipbook.turn("display", "double");
-                flipbook.turn("size", 960, 680);
+            // 3. Logika Toolbar Bawah
+            $("#zoomIn").click(function () {
+                currentZoomScale = Math.min(currentZoomScale + 0.1, 2);
                 applyZoom();
+            });
+
+            $("#zoomOut").click(function () {
+                currentZoomScale = Math.max(currentZoomScale - 0.1, 0.6);
+                applyZoom();
+            });
+
+            $("#menuBtn").click(function (e) {
+                e.stopPropagation();
+                $("#popupMenu").toggleClass("show");
+            });
+
+            $(document).click(function () { $("#popupMenu").removeClass("show"); });
+
+            $("#firstPageBtn").click(function () { flipbook.turn("page", 1); });
+            $("#lastPageBtn").click(function () { flipbook.turn("page", flipbook.turn("pages")); });
+
+            $("#fullscreenBtn").click(function () {
+                if (!document.fullscreenElement) {
+                    document.documentElement.requestFullscreen();
+                } else {
+                    if (document.exitFullscreen) { document.exitFullscreen(); }
+                }
+            });
+
+            // 4. Fungsi Responsive & Zoom (Tetap seperti kode Anda)
+            var currentZoomScale = 1;
+            function applyZoom() {
+                var width = $(window).width();
+                var baseWidth = 960;
+                var baseScale = 1;
+                if (width >= 768) {
+                    var scaleX = (width - 60) / baseWidth;
+                    var scaleY = ($(window).height() - 60) / 680;
+                    baseScale = Math.min(scaleX, scaleY);
+                    if (baseScale > 1.2) baseScale = 1.2;
+                }
+                $(".book-container").css("transform", "scale(" + (baseScale * currentZoomScale) + ")");
             }
-        }
 
-        $(window).resize(resizeViewport);
-        resizeViewport();
+            function resizeViewport() {
+                var width = $(window).width();
+                var container = $(".book-container");
+                if (width < 768) {
+                    flipbook.turn("display", "single");
+                    var mWidth = width - 20;
+                    flipbook.turn("size", mWidth, mWidth * 1.414);
+                    container.css({ "transform": "none", "width": mWidth, "height": mWidth * 1.414 });
+                } else {
+                    flipbook.turn("display", "double");
+                    flipbook.turn("size", 960, 680);
+                    applyZoom();
+                }
+            }
 
-        setTimeout(function () {
-            loader.fadeOut(500, function () { flipbook.addClass("loaded"); });
-        }, 500);
-    });
-    // Event Listener untuk Tombol Suara di Menu Popup
-$("#toggleSoundMenu").on("click", function (e) {
-    e.stopPropagation(); // Agar menu popup tidak langsung tertutup saat diklik
-    
-    isSoundOn = !isSoundOn; // Membalik status suara (true jadi false, dst)
-    var icon = $("#soundIconMenu"); // Mengincar icon di dalam menu
+            $(window).resize(resizeViewport);
+            resizeViewport();
 
-    if (isSoundOn) {
-        icon.removeClass("fa-volume-xmark").addClass("fa-volume-high");
-        $(this).html('<i class="fa-solid fa-volume-high" id="soundIconMenu"></i> Turn off Sound');
-        // Mainkan suara sekali sebagai feedback bahwa suara aktif
-        playPageSound(); 
-    } else {
-        icon.removeClass("fa-volume-high").addClass("fa-volume-xmark");
-        $(this).html('<i class="fa-solid fa-volume-xmark" id="soundIconMenu"></i> Turn on Sound');
-    }
-});
-</script>
+            setTimeout(function () {
+                loader.fadeOut(500, function () { flipbook.addClass("loaded"); });
+            }, 500);
+        });
+        // Event Listener untuk Tombol Suara di Menu Popup
+        $("#toggleSoundMenu").on("click", function (e) {
+            e.stopPropagation(); // Agar menu popup tidak langsung tertutup saat diklik
+
+            isSoundOn = !isSoundOn; // Membalik status suara (true jadi false, dst)
+            var icon = $("#soundIconMenu"); // Mengincar icon di dalam menu
+
+            if (isSoundOn) {
+                icon.removeClass("fa-volume-xmark").addClass("fa-volume-high");
+                $(this).html('<i class="fa-solid fa-volume-high" id="soundIconMenu"></i> Turn off Sound');
+                // Mainkan suara sekali sebagai feedback bahwa suara aktif
+                playPageSound();
+            } else {
+                icon.removeClass("fa-volume-high").addClass("fa-volume-xmark");
+                $(this).html('<i class="fa-solid fa-volume-xmark" id="soundIconMenu"></i> Turn on Sound');
+            }
+        });
+    </script>
 </body>
 
 </html>
