--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 <div><img src="images/page10.svg" alt="" /></div>
                 <div><img src="images/page11.svg" alt="" /></div>
                 <div><img src="images/page12.svg" alt="" /></div>
+                <div><img src="images/page13.svg" alt="" /></div>
+                <div><img src="images/page14.svg" alt="" /></div>
+                <div><img src="images/page15.svg" alt="" /></div>
+                <div><img src="images/page16.svg" alt="" /></div>
+                <div><img src="images/page17.svg" alt="" /></div>
+                <div><img src="images/page18.svg" alt="" /></div>
+                <div><img src="images/page19.svg" alt="" /></div>
 
                 <!-- Cover Dalam Belakang (Akan dihapus di Mobile) -->
                 <div class="hard inside-cover"><img src="images/Coverin2.svg" alt="" /></div>
@@ -202,5 +209,6 @@
         });
     </script>
 </body>
+
 
 </html>
