New Warta Edisi 20

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div><img src="images/page15.svg" alt="" /></div>
                 <div><img src="images/page16.svg" alt="" /></div>
                 <div><img src="images/page17.svg" alt="" /></div>
-                <div><img src="images/page18.svg" alt="" /></div>
-                <div><img src="images/page19.svg" alt="" /></div>
+               <!-- <div><img src="images/page18.svg" alt="" /></div>
+                <div><img src="images/page19.svg" alt="" /></div> -->
 
                 <!-- Cover Dalam Belakang (Akan dihapus di Mobile) -->
                 <div class="hard inside-cover"><img src="images/Coverin2.svg" alt="" /></div>
