--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <div><img src="images/page9.svg" alt="" /></div>
                 <div><img src="images/page10.svg" alt="" /></div>
                 <div><img src="images/page11.svg" alt="" /></div>
-                <div><img src="images/page12.svg" alt="" /></div>
+          <!--  <div><img src="images/page12.svg" alt="" /></div>
                 <div><img src="images/page13.svg" alt="" /></div>
                 <div><img src="images/page14.svg" alt="" /></div>
-                <div><img src="images/page15.svg" alt="" /></div>
+                <div><img src="images/page15.svg" alt="" /></div> -->
                 <div><img src="images/page16.svg" alt="" /></div>
                 <div><img src="images/page17.svg" alt="" /></div>
                <!-- <div><img src="images/page18.svg" alt="" /></div>
